--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.5",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.15.1",
+    "file-saver": "^2.0.5",
     "localforage": "^1.9.0",
     "node-sass": "^4.14.1",
     "vue": "^2.6.11",
@@ -24,6 +25,8 @@
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^7.3.1",
-    "vue-template-compiler": "^2.6.11"
+    "script-loader": "^0.7.2",
+    "vue-template-compiler": "^2.6.11",
+    "xlsx": "^0.16.9"
   }
 }
